--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <img id="image31" src="../Assets/31.jpg" class="hidden-image">
         <img id="image32" src="../Assets/32.jpg" class="hidden-image">
     </div>
-    <!-- <button id="start-button">Mulai</button> -->
+    <button id="start-button">Start</button>
     <script src="../Script/script.js"></script>
 </body>
 </html>
